--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "extern/fmt"]
-	path = extern/fmt
-	url = https://github.com/fmtlib/fmt.git
+[submodule "extern/json"]
+	path = extern/json
+	url = https://github.com/nlohmann/json
