--- a/pymodule/pyproject.toml
+++ b/pymodule/pyproject.toml
@@ -9,12 +9,14 @@ build-backend = "scikit_build_core.build"
 name = "pycatima"
 description = "Python interface to catima library"
 version = "1.71.0"
+
 authors = [
     {name = "Andrej Prochazka", email = "hrocho@vodacionline.sk"},
 ]
 maintainers = [
     {name = "Angus Hollands", email = "goosey15@gmail.com"},
 ]
+requires-python = ">=3.7"
 
 [tool.scikit-build]
 minimum-version = "0.2"
