chore: set C++14 standard

--- a/pymodule/CMakeLists.txt
+++ b/pymodule/CMakeLists.txt
@@ -12,6 +12,7 @@ message(STATUS "CMake version ${CMAKE_VERSION}")
 message(STATUS "CMAKE_BUILD_TYPE = ${CMAKE_BUILD_TYPE}")
 
 # Defaults for properties in this directory (and below)
+set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
