--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,13 +13,32 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ ubuntu-20.04, windows-2019, macos-11 ]
+        os: [ ubuntu-latest, macos-latest ]
+        arch: [ auto64 ]
+        build: [ "cp*", "pp*" ]
+
+        include:
+          - os: macos-latest
+            type: "Universal"
+            arch: universal2
+            build: "cp*"
+
+          - os: windows-latest
+            arch: auto64
+            build: "cp*"
+
+          - os: windows-latest
+            arch: auto32
+            build: "cp{37,38,39}-*"
 
     steps:
       - uses: actions/checkout@v3
 
       - name: Build wheels
         uses: "pypa/cibuildwheel@v2.12.0"
+        env:
+          CIBW_BUILD: ${{ matrix.build }}
+          CIBW_ARCHS: ${{ matrix.arch }}
         with:
           package-dir: pymodule
 
