refactor: use target-scoped flags

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,10 +41,6 @@ else ()
 endif ()
 ################################
 
-######### compiler flags ###########
-set(CMAKE_CXX_EXTENSIONS OFF)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-
 
 ############# Requirements ##################
 if (GSL_INTEGRATION OR GSL_INTERPOLATION)
@@ -77,8 +73,10 @@ add_library(catima src/abundance_database.cpp
         src/structures.cpp)
 set_target_properties(catima PROPERTIES POSITION_INDEPENDENT_CODE ON)
 
+######### compiler flags ###########
 target_link_libraries(catima PUBLIC ${EXTRA_LIBS})
 target_compile_features(catima PRIVATE cxx_std_17)
+set_target_properties(catima PROPERTIES CXX_EXTENSIONS OFF)
 target_include_directories(catima
         PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
                $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/generated>
@@ -99,10 +97,6 @@ endif (TESTS)
 if (GENERATE_DATA)
     add_executable(generate_ls_coeff utils/generator.cpp)
     target_link_libraries(generate_ls_coeff catima)
-    #add_custom_command(
-    #    OUTPUT ${CMAKE_CURRENT_BINARY_DIR/include/generated_LS_coeff.h}
-    #    COMMAND
-    #)
 endif (GENERATE_DATA)
 
 ###### Apps ######
