--- a/build_config.in
+++ b/build_config.in
@@ -5,6 +5,7 @@
 #cmakedefine GSL_INTEGRATION
 #cmakedefine GSL_INTERPOLATION
 #cmakedefine STORE_SPLINES
+#cmakedefine GLOBAL
 #cmakedefine REACTIONS
 #cmakedefine NUREX
 #cmakedefine ET_CALCULATED_INDEX
